Bug 1035244. Initialize canvas context width/height to 0, 0. r=bas

This fixes a ~50ms Phone and Contacts launch regression that's not
really understood.

--HG--
extra : rebase_source : df7cfefb53f4caa7a3719e02a8f399539d5dce02